@@ -6,8 +6,11 @@ The variables defined by the server are:
                                      in request
      %{reply:Attribute-Name}         Corresponding value for Attribute-Name
                                      in reply
+     %{check:Attribute-Name}         Corresponding value for Attribute-Name
+                                     in check items for request
      %{proxy-reply:Attribute-Name}   Corresponding value for Attribute-Name
                                      in the proxy reply (if it exists)
+	
 
      %{config:section.subsection.item} Corresponding value in 'radiusd.conf'
                                        for the string value of that item.
