@@ -4,6 +4,8 @@ FreeRADIUS 1.0.0 ; Date: $Date$, urgency=low
 	* Fix segfault due to poorly initialised value in rlm_mschap
 	* Added support for rejected packets to run an Post-Auth-Type REJECT
 	  stanza instead of skipping post-auth entirely.
+	* Added support for %{check:Attribute-Name} to go with
+	  %{request:Attribute-Name} and the like.
 
 FreeRADIUS 0.9.1 ; Date: 2003/09/04 14:56:34, urgency=low
 
